[package]
name = "ruin_os"
version = "0.0.2"
authors = ["mocomaminecraft <mocomaminecraft@gmail.com>"]
edition = "2018"

[dependencies]
bootloader = "0.9.3"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.11.0"
pc-keyboard = "0.5.0" 

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]
